--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -43,14 +43,14 @@ body {
 }
 
 header button {
-  color: #31a8dd;
+  color: #31A8DD;
   font-size: 1rem;
   font-weight: 900;
   padding: 16px 32px;
   text-transform: uppercase;
   letter-spacing: 4px;
   background-color: transparent;
-  border-image: linear-gradient(#3ba1cd, #1572b7);
+  border-image: linear-gradient(#3BA1CD, #1572B7);
   border-image-slice: 10;
   transition: 0.6s;
 }
@@ -58,6 +58,160 @@ header button {
 header button:hover {
   cursor: pointer;
   transform: scale(0.985);
-  background-color: #33a8db;
+  background-color: #33A8DB;
   color: #fff;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
+
+#course-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 792px;
+    height: 520px;
+}
+
+#course-content > h2{
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 32px;
+    color: #33A8DB;
+    text-transform: uppercase;
+    letter-spacing: 6px;
+}
+
+#course-content>p{
+    font-family: 'Raleway';
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.modules-list{
+    display: flex;
+    flex-direction: column;
+    gap: 15px
+}
+
+.module{
+    background-color: #252525;
+    width: 535px;
+    height: 51px;
+    border-radius: 57px;
+    border: 1px solid #33A8DB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: -2px 6px 4px 0px #00000066 inset;
+    font-family: 'Raleway';
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.module>span{
+    color: #33A8DB;
+    margin-right: 5px;
+}
+
+.module:hover{
+    cursor: default;
+}
+
+#transform-world{
+    width: 100%;
+    box-sizing: border-box;
+    height: 363px;
+    text-align: left;
+    background-image: url(../images/woman-code.png);
+    background-size: cover;
+    background-position: 0px -273px;
+    border: 1px solid #33A8DB;
+    display: flex;
+    align-items: center;
+}
+
+#transform-world > p{
+    font-family: 'Raleway';
+    font-weight: 900;
+    font-size: 40px;
+    text-shadow: 3px 2px#33A8DB;
+    text-transform: lowercase;
+    width: 244px;
+    margin-left: 180px;
+}
+
+#professional-challenges{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 850px;
+    width: 100%;
+    gap: 20px;
+    border-bottom: 1px solid #33A8DB;
+}
+
+#professional-challenges>h2{
+    width: 746px;
+    font-family: 'Raleway';
+    font-size: 32px;
+    font-weight: 700;
+    color: #33A8DB;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+#professional-challenges>img{
+    width: 659px;
+}
+
+#professional-challenges>p{
+    width: 792px;
+    font-family: 'Raleway';
+    font-weight: 400;
+    font-size: 16px;
+    text-align: center;
+}
+
+footer{
+    height: 170px;
+    background-image: linear-gradient(#33A8DB00, #338adb23, rgba(51, 138, 219, 0.219));
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+footer>img{
+    width: 310px;
+}
+
+footer>p{
+    font-family: 'Raleway';
+    font-size: 16px;
+    font-weight: 400;
+    margin: 5px;
+}
+
+footer>p>a:link{
+    text-decoration: none;
+    font-weight: bolder;
+    color: #33A8DB;
+}
+
+footer>p>a:visited{
+    text-decoration: none;
+    font-weight: bolder;
+    color: #33A8DB;
+}
+
+footer>p>a:hover{
+    color: #9be1ff;
 }
